--- a/configs/x3399headunit_defconfig
+++ b/configs/x3399headunit_defconfig
@@ -21,11 +21,12 @@ CONFIG_DISPLAY_BOARDINFO_LATE=y
 CONFIG_SPL_STACK_R=y
 CONFIG_SPL_STACK_R_MALLOC_SIMPLE_LEN=0x10000
 CONFIG_TPL=y
+# CONFIG_CMD_BDI is not set
 # CONFIG_CMD_CONSOLE is not set
 CONFIG_CMD_BOOT_ANDROID=y
-CONFIG_CMD_BOOTZ=y
-# CONFIG_CMD_BOOTEFI is not set
+# CONFIG_CMD_BOOTD is not set
 # CONFIG_CMD_ELF is not set
+# CONFIG_CMD_GO is not set
 # CONFIG_CMD_IMI is not set
 # CONFIG_CMD_XIMG is not set
 # CONFIG_CMD_EXPORTENV is not set
@@ -33,14 +34,15 @@ CONFIG_CMD_BOOTZ=y
 # CONFIG_CMD_CRC32 is not set
 # CONFIG_CMD_LZMADEC is not set
 # CONFIG_CMD_FLASH is not set
+CONFIG_CMD_GPIO=y
 CONFIG_CMD_GPT=y
 CONFIG_CMD_GPT_RENAME=y
+CONFIG_CMD_I2C=y
 # CONFIG_CMD_LOADB is not set
 # CONFIG_CMD_LOADS is not set
 CONFIG_CMD_MMC=y
 CONFIG_CMD_POWEROFF=y
 CONFIG_CMD_USB=y
-CONFIG_CMD_I2C=y
 # CONFIG_CMD_ECHO is not set
 # CONFIG_CMD_ITEST is not set
 # CONFIG_CMD_SOURCE is not set
@@ -67,6 +69,7 @@ CONFIG_FASTBOOT_CMD_OEM_FORMAT=y
 CONFIG_ROCKCHIP_GPIO=y
 CONFIG_SYS_I2C_ROCKCHIP=y
 CONFIG_MISC=y
+CONFIG_ROCKCHIP_EFUSE=y
 # CONFIG_SPL_DM_MMC is not set
 CONFIG_MMC_HS400_SUPPORT=y
 CONFIG_MMC_DW=y
@@ -103,9 +106,13 @@ CONFIG_USB_GADGET_MANUFACTURER="Rockchip"
 CONFIG_USB_GADGET_VENDOR_NUM=0x18D1
 CONFIG_USB_GADGET_PRODUCT_NUM=0x4E26
 CONFIG_USB_FUNCTION_ROCKUSB=y
+CONFIG_CC_OPTIMIZE_LIBS_FOR_SPEED=y
 CONFIG_USE_TINY_PRINTF=y
+CONFIG_REGEX=y
 CONFIG_SPL_TINY_MEMSET=y
 CONFIG_LIBAVB=y
 CONFIG_LZ4=y
 CONFIG_LZMA=y
 CONFIG_ERRNO_STR=y
+CONFIG_HEXDUMP=y
+# CONFIG_EFI_LOADER is not set
